version 0.8.1:
 - "system" elements now attempt to intelligently convert between UNIX-style
   and Windows-style pathnames as appropriate.  For cross-platform compatibility,
   all AIML files should use UNIX-style paths inside their "system" elements.

version 0.8:
 - Removed support for non-standard "mode" attribute in "system" elements.
   It just wasn't worth breaking the AIML standard for.
 - Reworked persistent session support (I warned you!).  The old method involving
   Kernel.persistentSessions() has been removed.  Instead, there is a new
   Kernel.getSessionData() method which gives the bot author access to the session
   data.  You can store this data however you wish.  Session data can be restored
   later by repeated calls to Kernel.setPredicate().
 - Improved AIML parser error handling; instead of aborting the entire file, a
   parse error now only ignores the current category and forges ahead.  To check for
   parse errors, check the return value of AimlParser.getNumErrors() after parsing.

version 0.7:
 - Further improved AIML parsing; missing or invalid XML attributes are now
   detected at parse-time.  There's also a first stab at support for Forward
   Compatibility Mode: if the "version" attribute of an AIML tag is not 1.0.1,
   the parser is much more forgiving of unknown or missing XML tags and attributes.
 - Added "support" for the 'gossip' tag.  The specific behavior of this tag is
   totally undefined; currently, the PyAIML implementation treats it as a big
   no-op.  Its contents are ignored, and it returns the empty string (but at least
   it isn't flagged as a syntax error!) 
 - Oops; I've implemented 'person' as 'person2' and vice versa this whole time!
   Swapped them back; they should each behave correctly now.
 - A bit of code cleanup, with an emphasis on using proper XML/AIML terminology
   whenever possible.
 - Fixed some exception-masking in the 'condition' element processor, which could